docs/admission-controller/version-1.34/modules/en/pages/howtos/telemetry/10-opentelemetry-qs.adoc
include::partial$variables.adoc[]
= Open Telemetry quick start
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-03-18
:page-revdate: {revdate}
:description: Configure and deploy the OpenTelemetry collector in sidecar mode using the official Kubernetes Helm chart for simple and enhanced deployment.
:doc-persona: ["kubewarden-operator", "kubewarden-integrator"]
:doc-topic: ["operator-manual", "telemetry", "opentelemetry", "quick-start"]
:doc-type: ["howto"]
:keywords: ["kubewarden", "kubernetes", "opentelemetry", "open telemetry", "quickstart"]
:sidebar_label: Open Telemetry
:current-version: {page-origin-branch}

https://opentelemetry.io/[OpenTelemetry] is a Cloud Native Computing Foundation
(CNCF) framework for observability. It enables your microservices to provide
metrics, logs and traces.

{project-name}'s components, using the OpenTelemetry SDK, report data to
an OpenTelemetry collector — called the agent.

This guide explains how to deploy the OpenTelemetry collector in `sidecar` mode
by using the official Kubernetes Helm chart.

This is a simple deployment pattern using OpenTelemetry. It's final setup looks
like this:

* Each Pod of the {short-project-name} stack (Policy Server, Controller) has an
  OpenTelemetry sidecar.
* The sidecar receives tracing and monitoring information from the
  {short-project-name} component via the OpenTelemetry Protocol (OTLP)
* The OpenTelemetry collector:
 ** Sends the trace events to a central Jaeger instance
 ** Exposes Prometheus metrics on a specific port

The {short-project-name} Helm chart doesn't cover all the possible deployment
scenarios of the OpenTelemetry collector. It's also possible to configure
{short-project-name} to send data to an OpenTelemetry collector. Documentation
for that scenario is in the xref:./40-custom-otel-collector.adoc[custom
OpenTelemetry guide].

You first deploy OpenTelemetry in a Kubernetes cluster, so you can use it in
the following sections addressing specifically tracing and metrics.

== Setting up a Kubernetes cluster

[NOTE]
====
This section has step-by-step instructions for creating a
Kubernetes cluster for the telemetry quick starts.

Feel free to skip this section if you already have a Kubernetes
cluster available.
====

You can create a Kubernetes cluster for testing using https://minikube.sigs.k8s.io/docs/[minikube].

Minikube has many backends, for this case you can use the
https://minikube.sigs.k8s.io/docs/drivers/kvm2/[kvm2] driver
which relies on libvirt.

Assuming `libvirtd` is correctly running on your machine, issue the
following command:

[subs="+attributes",console]
----
minikube start --driver=kvm2
----

The command produces an output similar to the following:

[subs="+attributes",console]
----
$ minikube start --driver=kvm2
😄  minikube v1.23.2 on Opensuse-Leap 15.3
✨  Using the kvm2 driver based on user configuration
👍  Starting control plane node minikube in cluster minikube
🔥  Creating kvm2 VM (CPUs=2, Memory=6000MB, Disk=20000MB) ...
🐳  Preparing Kubernetes v1.22.2 on Docker 20.10.8 ...
    ▪ Generating certificates and keys ...
    ▪ Booting up control plane ...
    ▪ Configuring RBAC rules ...
🔎  Verifying Kubernetes components...
    ▪ Using image gcr.io/k8s-minikube/storage-provisioner:v5
🌟  Enabled addons: storage-provisioner, default-storageclass
🏄  Done! kubectl is now configured to use "minikube" cluster and "default" namespace by default
----

After the cluster is ready, you can continue with the rest of the guide.

=== Install Traefik

The following telemetry guides use https://traefik.io/traefik/[Traefik] as the
Ingress controller when exposing the Jaeger UI with Kubernetes `Ingress`
resources.

Install Traefik by using its Helm chart:

[,console]
----
helm repo add traefik https://traefik.github.io/charts
helm repo update

helm install --wait \
  --namespace traefik \
  --create-namespace \
  traefik traefik/traefik
----

The following guides create a standard Kubernetes `Ingress` with
`ingressClassName: traefik` and route the Jaeger Query UI through the Traefik
Service.

If you prefer not to install Traefik, the tracing guides also keep
`kubectl port-forward` as a fallback to access Jaeger directly.

[#install-opentelemetry]
[#_install_opentelemetry]
== Install OpenTelemetry

[NOTE]
====
See the xref:/reference/dependency-matrix.adoc[dependency matrix] for the latest supported component versions.
====

You use the
https://github.com/open-telemetry/opentelemetry-operator[OpenTelemetry
Operator] to manage the automatic injection of the OpenTelemetry Collector
sidecar into the PolicyServer pod.

The OpenTelemetry Operator requires installation of
https://cert-manager.io/docs/installation/[cert-manager] in the cluster.


[subs="+attributes",console]
----
helm repo add jetstack https://charts.jetstack.io

helm install --wait \
    --namespace cert-manager \
    --create-namespace \
    --set crds.enabled=true \
    --version 1.18.2 \
    cert-manager jetstack/cert-manager
----

Once cert-manager is running, you can install the OpenTelemetry operator Helm
chart:

[NOTE]
====

At the time of writing (2024-11-11) the latest OpenTelemetry operator chart
version is `0.65.0`

====

[subs="+attributes",console]
----
helm repo add open-telemetry https://open-telemetry.github.io/opentelemetry-helm-charts

helm install --wait \
  --namespace open-telemetry \
  --create-namespace \
  --version 0.97.1 \
  --set "manager.collectorImage.repository=otel/opentelemetry-collector-contrib" \
  my-opentelemetry-operator open-telemetry/opentelemetry-operator
----

== OpenTelemetry integration

You can now move to the next chapters to enable application metrics (via
Prometheus integration) and application tracing (via Jaeger integration).
